--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "list"
   ],
   "author": "UDORI",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.5",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1"
+  }
 }
