--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jimp": "^0.2.28",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.1"
